# awslogs

./: .gitignore  README.md  pyproject.toml
awslogs/: __init__.py  __main__.py
